// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`buildConfig — snapshots > CIS snapshot 1`] = `
{
  "cashback": {
    "basis": "v_net_losses",
    "cur": "RUB",
    "maxAmt": "5000 RUB",
    "minLoss": "30 RUB",
    "model": "flat",
    "pct": 10,
    "period": "v_weekly",
    "wager": 0,
  },
  "contrib": [
    {
      "game": "Slots",
      "pct": 100,
    },
    {
      "game": "Slots low RTP",
      "pct": 0,
    },
    {
      "game": "Live Casino",
      "pct": 0,
    },
    {
      "game": "Roulette",
      "pct": 0,
    },
    {
      "game": "Blackjack",
      "pct": 0,
    },
    {
      "game": "Crash Games",
      "pct": 50,
    },
    {
      "game": "Scratch Cards",
      "pct": 50,
    },
  ],
  "cur": "RUB",
  "dep": 100,
  "dep2": {
    "code": "DEP2",
    "cur": "RUB",
    "days": 30,
    "fs": 75,
    "maxB": 300,
    "minD": 30,
    "pct": 75,
    "trigger": "v_2nd_purchase",
    "type": "match",
    "wager": 40,
  },
  "dep3": {
    "code": "DEP3",
    "cur": "RUB",
    "days": 30,
    "fs": 50,
    "maxB": 200,
    "minD": 30,
    "pct": 50,
    "trigger": "v_3rd_purchase",
    "type": "match",
    "wager": 35,
  },
  "depcur": "RUB",
  "econ": {
    "acqCostRatio": 0.183,
    "arpu": 22,
    "be": 1,
    "bonusSize": 100,
    "bpct": 25,
    "breakeven_wager": 24.3,
    "cac": 8,
    "costRatio": 0.222,
    "ltv3": 66,
    "mBudget": 40000,
    "maxRisk": 500000,
    "mixedRTP": 0.964,
    "mixedWCR": 0.875,
    "over_breakeven": true,
    "pl": 5000,
    "roi3": 175,
    "sP10": {
      "conv": 0.1,
      "cost": 1422,
      "payout": 2.84,
      "rtp": 0.959,
      "turnover": 4678,
      "wcr": 0.855,
    },
    "sP50": {
      "conv": 0.2,
      "cost": 6132,
      "payout": 6.13,
      "rtp": 0.964,
      "turnover": 4571,
      "wcr": 0.875,
    },
    "sP90": {
      "conv": 0.4,
      "cost": 18772,
      "payout": 9.39,
      "rtp": 0.967,
      "turnover": 4469,
      "wcr": 0.895,
    },
    "stressTest": 7358,
    "totLTV": 330000,
    "verdictKey": "verdict_ok",
    "wagerX": 40,
  },
  "fsSpec": {
    "count": 200,
    "cur": "EUR",
    "days": 7,
    "games": "v_slots_only",
    "maxW": "5x_spin_value",
    "val": 0.1,
    "wager": 35,
  },
  "lic": "none",
  "ndb": {
    "amt": 30,
    "days": 7,
    "fs": 50,
    "limit": "v_1_per_account",
    "maxW_x": 5,
    "ndCur": "FS",
    "trigger": "v_reg_verify",
    "type": "combined",
    "wager": 55,
  },
  "pl": 5000,
  "r": "cis",
  "reg": null,
  "reload": {
    "code": "RELOAD50",
    "cur": "RUB",
    "day": "v_day_fri",
    "freq": "v_weekly",
    "fs": 50,
    "limit": "v_1_per_period",
    "maxB": 150,
    "minD": 30,
    "pct": 50,
    "type": "match",
  },
  "rtp": 96,
  "sc": "RUB",
  "wager": {
    "basis": "v_bonus_only",
    "days": 30,
    "gameRtp": 96,
    "games": "v_slots_only",
    "mb": "v_no_limit",
    "model": "standard",
    "wF": 35,
    "wN": 55,
    "wR": 35,
    "wW": 40,
  },
  "welcome": {
    "code": "WELCOME100",
    "cur": "RUB",
    "days": 30,
    "fs": 100,
    "maxB": 500,
    "minD": 30,
    "pct": 100,
    "trigger": "v_first_dep",
    "type": "match",
  },
}
`;

exports[`buildConfig — snapshots > Crypto snapshot 1`] = `
{
  "cashback": {
    "basis": "v_net_losses",
    "cur": "ETH",
    "maxAmt": "5000 ETH",
    "minLoss": "30 ETH",
    "model": "flat",
    "pct": 15,
    "period": "v_weekly",
    "wager": 0,
  },
  "contrib": [
    {
      "game": "Slots",
      "pct": 100,
    },
    {
      "game": "Live Casino",
      "pct": 10,
    },
    {
      "game": "Roulette",
      "pct": 10,
    },
    {
      "game": "Blackjack",
      "pct": 5,
    },
    {
      "game": "Video Poker",
      "pct": 20,
    },
    {
      "game": "Crash Games",
      "pct": 50,
    },
    {
      "game": "Keno/Lottery",
      "pct": 50,
    },
  ],
  "cur": "ETH",
  "dep": 100,
  "dep2": {
    "code": "DEP2",
    "cur": "ETH",
    "days": 60,
    "fs": 150,
    "maxB": 300,
    "minD": 10,
    "pct": 100,
    "trigger": "v_2nd_purchase",
    "type": "match",
    "wager": 40,
  },
  "dep3": {
    "code": "DEP3",
    "cur": "ETH",
    "days": 60,
    "fs": 100,
    "maxB": 200,
    "minD": 10,
    "pct": 75,
    "trigger": "v_3rd_purchase",
    "type": "match",
    "wager": 40,
  },
  "depcur": "ETH",
  "econ": {
    "acqCostRatio": 0.18,
    "arpu": 95,
    "be": 1,
    "bonusSize": 150,
    "bpct": 28,
    "breakeven_wager": 23.5,
    "cac": 40,
    "costRatio": 0.22,
    "ltv3": 285,
    "mBudget": 200000,
    "maxRisk": 750000,
    "mixedRTP": 0.9715,
    "mixedWCR": 0.67,
    "over_breakeven": true,
    "pl": 5000,
    "roi3": 138,
    "sP10": {
      "conv": 0.1,
      "cost": 974,
      "payout": 1.95,
      "rtp": 0.966,
      "turnover": 9231,
      "wcr": 0.65,
    },
    "sP50": {
      "conv": 0.2,
      "cost": 6342,
      "payout": 6.34,
      "rtp": 0.971,
      "turnover": 8955,
      "wcr": 0.67,
    },
    "sP90": {
      "conv": 0.4,
      "cost": 23657,
      "payout": 11.83,
      "rtp": 0.974,
      "turnover": 8696,
      "wcr": 0.69,
    },
    "stressTest": 7610,
    "totLTV": 1425000,
    "verdictKey": "verdict_ok",
    "wagerX": 40,
  },
  "fsSpec": {
    "count": 200,
    "cur": "USDT",
    "days": 14,
    "games": "v_slots_only",
    "maxW": "5x_spin_value",
    "val": 0.2,
    "wager": 30,
  },
  "lic": "none",
  "ndb": {
    "amt": 2,
    "days": 14,
    "fs": 50,
    "limit": "v_1_per_account",
    "maxW_x": 3,
    "ndCur": "ETH",
    "trigger": "v_reg_verify",
    "type": "crypto",
    "wager": 50,
  },
  "pl": 5000,
  "r": "crypto",
  "reg": null,
  "reload": {
    "code": "RELOAD50",
    "cur": "ETH",
    "day": "v_day_mon",
    "freq": "v_weekly",
    "fs": 100,
    "limit": "v_1_per_period",
    "maxB": 150,
    "minD": 10,
    "pct": 50,
    "type": "match",
  },
  "rtp": 96,
  "sc": "ETH",
  "wager": {
    "basis": "v_dep_bonus",
    "days": 90,
    "gameRtp": 96,
    "games": "v_all_games",
    "mb": "v_no_limit",
    "model": "standard",
    "wF": 30,
    "wN": 50,
    "wR": 35,
    "wW": 40,
  },
  "welcome": {
    "code": "WELCOME150",
    "cur": "ETH",
    "days": 90,
    "fs": 200,
    "maxB": 1500,
    "minD": 10,
    "pct": 150,
    "trigger": "v_first_dep",
    "type": "match",
  },
}
`;

exports[`buildConfig — snapshots > DK/DGA snapshot 1`] = `
{
  "cashback": {
    "basis": "v_net_losses_monthly",
    "maxAmt": "5000 DKK",
    "model": "tier",
    "period": "v_monthly",
    "tiers": [
      {
        "color": "#CD7F32",
        "from": "0 DKK",
        "name": "ct_bronze",
        "pct": "5%",
        "to": "100 DKK",
      },
      {
        "color": "#94A3B8",
        "from": "100 DKK",
        "name": "ct_silver",
        "pct": "10%",
        "to": "500 DKK",
      },
      {
        "color": "#D97706",
        "from": "500 DKK",
        "name": "ct_gold",
        "pct": "15%",
        "to": "2000 DKK",
      },
      {
        "color": "#7C3AED",
        "from": "2000 DKK",
        "name": "ct_platinum",
        "pct": "20%",
        "to": "∞",
      },
    ],
    "wager": 0,
  },
  "contrib": [
    {
      "game": "Slots",
      "pct": 100,
    },
    {
      "game": "Slots low RTP",
      "pct": 0,
    },
    {
      "game": "Live Casino",
      "pct": 0,
    },
    {
      "game": "Roulette",
      "pct": 0,
    },
    {
      "game": "Blackjack",
      "pct": 0,
    },
    {
      "game": "Crash Games",
      "pct": 0,
    },
    {
      "game": "Scratch Cards",
      "pct": 50,
    },
  ],
  "cur": "DKK",
  "dep": 700,
  "dep2": {
    "code": "DEP2",
    "cur": "DKK",
    "days": 30,
    "fs": 30,
    "maxB": 750,
    "minD": 105,
    "pct": 75,
    "trigger": "v_2nd_purchase",
    "type": "match",
    "wager": 25,
  },
  "dep3": {
    "code": "DEP3",
    "cur": "DKK",
    "days": 30,
    "fs": 20,
    "maxB": 500,
    "minD": 105,
    "pct": 50,
    "trigger": "v_3rd_purchase",
    "type": "match",
    "wager": 25,
  },
  "depcur": "DKK",
  "econ": {
    "acqCostRatio": 0.17,
    "arpu": 65,
    "be": 1,
    "bonusSize": 700,
    "bpct": 18,
    "breakeven_wager": 21.2,
    "cac": 25,
    "costRatio": 0.213,
    "ltv3": 195,
    "mBudget": 125000,
    "maxRisk": 3500000,
    "mixedRTP": 0.9705,
    "mixedWCR": 0.625,
    "over_breakeven": true,
    "pl": 5000,
    "roi3": 160,
    "sP10": {
      "conv": 0.1,
      "cost": 1369,
      "payout": 2.74,
      "rtp": 0.966,
      "turnover": 28926,
      "wcr": 0.605,
    },
    "sP50": {
      "conv": 0.2,
      "cost": 21835,
      "payout": 21.84,
      "rtp": 0.971,
      "turnover": 28000,
      "wcr": 0.625,
    },
    "sP90": {
      "conv": 0.4,
      "cost": 113306,
      "payout": 56.65,
      "rtp": 0.974,
      "turnover": 27132,
      "wcr": 0.645,
    },
    "stressTest": 26202,
    "totLTV": 975000,
    "verdictKey": "verdict_ok",
    "wagerX": 25,
  },
  "fsSpec": {
    "count": 200,
    "cur": "EUR",
    "days": 7,
    "games": "v_slots_only",
    "maxW": "5x_spin_value",
    "val": 0.1,
    "wager": 25,
  },
  "lic": "dga",
  "ndb": {
    "amt": 0,
    "days": 60,
    "fs": 20,
    "limit": "v_1_per_account",
    "maxW_x": 3,
    "ndCur": "FS",
    "note": "dga_note",
    "trigger": "v_reg_verify",
    "type": "fs_restricted",
    "wager": 20,
  },
  "pl": 5000,
  "r": "eu",
  "reg": [
    "reg_dga_1",
    "reg_dga_2",
    "reg_dga_3",
    "reg_dga_4",
  ],
  "reload": {
    "code": "RELOAD50",
    "cur": "DKK",
    "day": "v_day_tue",
    "freq": "v_weekly",
    "fs": 25,
    "limit": "v_1_per_period",
    "maxB": 500,
    "minD": 105,
    "pct": 50,
    "type": "match",
  },
  "rtp": 96,
  "sc": "DKK",
  "wager": {
    "basis": "v_bonus_only",
    "days": 30,
    "gameRtp": 96,
    "games": "v_slots_only",
    "mb": "v_dga_max_bet",
    "model": "standard",
    "wF": 25,
    "wN": 30,
    "wR": 25,
    "wW": 25,
  },
  "welcome": {
    "code": "WELCOME100",
    "cur": "DKK",
    "days": 30,
    "fs": 200,
    "maxB": 1000,
    "minD": 105,
    "pct": 100,
    "trigger": "v_first_dep",
    "type": "match",
  },
}
`;

exports[`buildConfig — snapshots > EU/MGA snapshot 1`] = `
{
  "cashback": {
    "basis": "v_net_losses_monthly",
    "maxAmt": "5000 EUR",
    "model": "tier",
    "period": "v_monthly",
    "tiers": [
      {
        "color": "#CD7F32",
        "from": "0 EUR",
        "name": "ct_bronze",
        "pct": "5%",
        "to": "100 EUR",
      },
      {
        "color": "#94A3B8",
        "from": "100 EUR",
        "name": "ct_silver",
        "pct": "10%",
        "to": "500 EUR",
      },
      {
        "color": "#D97706",
        "from": "500 EUR",
        "name": "ct_gold",
        "pct": "15%",
        "to": "2000 EUR",
      },
      {
        "color": "#7C3AED",
        "from": "2000 EUR",
        "name": "ct_platinum",
        "pct": "20%",
        "to": "∞",
      },
    ],
    "wager": 0,
  },
  "contrib": [
    {
      "game": "Slots",
      "pct": 100,
    },
    {
      "game": "Slots low RTP",
      "pct": 0,
    },
    {
      "game": "Live Casino",
      "pct": 0,
    },
    {
      "game": "Roulette",
      "pct": 0,
    },
    {
      "game": "Blackjack",
      "pct": 0,
    },
    {
      "game": "Crash Games",
      "pct": 0,
    },
    {
      "game": "Scratch Cards",
      "pct": 50,
    },
  ],
  "cur": "EUR",
  "dep": 100,
  "dep2": {
    "code": "DEP2",
    "cur": "EUR",
    "days": 30,
    "fs": 75,
    "maxB": 1000,
    "minD": 15,
    "pct": 75,
    "trigger": "v_2nd_purchase",
    "type": "match",
    "wager": 35,
  },
  "dep3": {
    "code": "DEP3",
    "cur": "EUR",
    "days": 30,
    "fs": 50,
    "maxB": 500,
    "minD": 15,
    "pct": 50,
    "trigger": "v_3rd_purchase",
    "type": "match",
    "wager": 30,
  },
  "depcur": "EUR",
  "econ": {
    "acqCostRatio": 0.147,
    "arpu": 65,
    "be": 1,
    "bonusSize": 100,
    "bpct": 18,
    "breakeven_wager": 21.2,
    "cac": 25,
    "costRatio": 0.193,
    "ltv3": 195,
    "mBudget": 125000,
    "maxRisk": 500000,
    "mixedRTP": 0.9705,
    "mixedWCR": 0.625,
    "over_breakeven": true,
    "pl": 5000,
    "roi3": 160,
    "sP10": {
      "conv": 0.1,
      "cost": 1697,
      "payout": 3.39,
      "rtp": 0.966,
      "turnover": 5785,
      "wcr": 0.605,
    },
    "sP50": {
      "conv": 0.2,
      "cost": 7920,
      "payout": 7.92,
      "rtp": 0.971,
      "turnover": 5600,
      "wcr": 0.625,
    },
    "sP90": {
      "conv": 0.4,
      "cost": 25070,
      "payout": 12.54,
      "rtp": 0.974,
      "turnover": 5426,
      "wcr": 0.645,
    },
    "stressTest": 9504,
    "totLTV": 975000,
    "verdictKey": "verdict_ok",
    "wagerX": 35,
  },
  "fsSpec": {
    "count": 200,
    "cur": "EUR",
    "days": 7,
    "games": "v_slots_only",
    "maxW": "5x_spin_value",
    "val": 0.1,
    "wager": 25,
  },
  "lic": "mga",
  "ndb": {
    "amt": 10,
    "days": 7,
    "fs": 50,
    "limit": "v_1_per_account",
    "maxW_x": 3,
    "ndCur": "FS",
    "trigger": "v_reg_verify",
    "type": "combined",
    "wager": 45,
  },
  "pl": 5000,
  "r": "eu",
  "reg": [
    "reg_mga_1",
    "reg_mga_2",
    "reg_mga_3",
    "reg_mga_4",
    "reg_mga_5",
  ],
  "reload": {
    "code": "RELOAD50",
    "cur": "EUR",
    "day": "v_day_tue",
    "freq": "v_weekly",
    "fs": 50,
    "limit": "v_1_per_period",
    "maxB": 150,
    "minD": 15,
    "pct": 50,
    "type": "match",
  },
  "rtp": 96,
  "sc": "EUR",
  "wager": {
    "basis": "v_bonus_only",
    "days": 30,
    "gameRtp": 96,
    "games": "v_slots_only",
    "mb": "v_eu_max_bet",
    "model": "standard",
    "wF": 25,
    "wN": 50,
    "wR": 25,
    "wW": 35,
  },
  "welcome": {
    "code": "WELCOME100",
    "cur": "EUR",
    "days": 30,
    "fs": 200,
    "maxB": 1000,
    "minD": 15,
    "pct": 100,
    "trigger": "v_first_dep",
    "type": "match",
  },
}
`;

exports[`buildConfig — snapshots > MN snapshot 1`] = `
{
  "cashback": {
    "basis": "v_net_losses",
    "cur": "MNT",
    "maxAmt": "200000 MNT",
    "minLoss": "3000 MNT",
    "model": "flat",
    "pct": 8,
    "period": "v_weekly",
    "wager": 0,
  },
  "contrib": [
    {
      "game": "Slots",
      "pct": 100,
    },
    {
      "game": "Slots low RTP",
      "pct": 0,
    },
    {
      "game": "Live Casino",
      "pct": 0,
    },
    {
      "game": "Roulette",
      "pct": 0,
    },
    {
      "game": "Blackjack",
      "pct": 0,
    },
    {
      "game": "Crash Games",
      "pct": 50,
    },
    {
      "game": "Scratch Cards",
      "pct": 50,
    },
  ],
  "cur": "MNT",
  "dep": 100000,
  "dep2": {
    "code": "DEP2",
    "cur": "MNT",
    "days": 30,
    "fs": 15,
    "maxB": 30000,
    "minD": 3000,
    "minDRef": true,
    "pct": 75,
    "trigger": "v_2nd_purchase",
    "type": "match",
    "wager": 40,
    "wagerRef": true,
  },
  "dep3": {
    "code": "DEP3",
    "cur": "MNT",
    "days": 30,
    "fs": 10,
    "maxB": 20000,
    "minD": 3000,
    "minDRef": true,
    "pct": 50,
    "trigger": "v_3rd_purchase",
    "type": "match",
    "wager": 35,
  },
  "depcur": "MNT",
  "econ": {
    "acqCostRatio": 0.133,
    "arpu": 12,
    "be": 1,
    "bonusSize": 100000,
    "bpct": 22,
    "breakeven_wager": 23.9,
    "cac": 5,
    "costRatio": 0.141,
    "ltv3": 36,
    "mBudget": 25000,
    "maxRisk": 500000000,
    "mixedRTP": 0.9655,
    "mixedWCR": 0.825,
    "over_breakeven": true,
    "pl": 5000,
    "roi3": 140,
    "sP10": {
      "conv": 0.1,
      "cost": 25474684,
      "payout": 50949.37,
      "rtp": 0.961,
      "turnover": 4968944,
      "wcr": 0.805,
    },
    "sP50": {
      "conv": 0.2,
      "cost": 59782609,
      "payout": 59782.61,
      "rtp": 0.966,
      "turnover": 4848485,
      "wcr": 0.825,
    },
    "sP90": {
      "conv": 0.4,
      "cost": 134126984,
      "payout": 67063.49,
      "rtp": 0.969,
      "turnover": 4733728,
      "wcr": 0.845,
    },
    "stressTest": 71739131,
    "totLTV": 180000,
    "verdictKey": "verdict_ok",
    "wagerX": 40,
  },
  "fsSpec": {
    "count": 50,
    "cur": "EUR",
    "days": 7,
    "games": "v_slots_only",
    "maxW": "5x_spin_value",
    "val": 0.05,
    "wager": 25,
  },
  "lic": "none",
  "ndb": {
    "amt": 5000,
    "days": 7,
    "fs": 20,
    "limit": "v_1_per_account",
    "maxW_x": 3,
    "ndCur": "MNT",
    "trigger": "v_reg_verify",
    "type": "combined",
    "wager": 35,
  },
  "pl": 5000,
  "r": "mn",
  "reg": null,
  "reload": {
    "code": "RELOAD50",
    "cur": "MNT",
    "day": "v_day_sat",
    "freq": "v_weekly",
    "fs": 10,
    "limit": "v_1_per_period",
    "maxB": 10000,
    "minD": 3000,
    "pct": 50,
    "type": "match",
  },
  "rtp": 96,
  "sc": "MNT",
  "wager": {
    "basis": "v_bonus_only",
    "days": 30,
    "gameRtp": 96,
    "games": "v_slots_only",
    "mb": "v_no_limit",
    "model": "standard",
    "wF": 25,
    "wN": 35,
    "wR": 30,
    "wW": 40,
  },
  "welcome": {
    "code": "WELCOME100",
    "cur": "MNT",
    "days": 30,
    "fs": 30,
    "maxB": 100000,
    "minD": 3000,
    "pct": 100,
    "trigger": "v_first_dep",
    "type": "match",
  },
}
`;

exports[`buildConfig — snapshots > Sweep snapshot 1`] = `
{
  "cashback": {
    "basis": "v_net_losses",
    "cur": "SC",
    "maxAmt": "500 SC",
    "minLoss": "10 SC",
    "model": "flat",
    "pct": 5,
    "period": "v_weekly",
    "wager": 0,
  },
  "contrib": [
    {
      "game": "Slots",
      "pct": 100,
    },
    {
      "game": "Slots low RTP",
      "pct": 0,
    },
    {
      "game": "Live Casino",
      "pct": 0,
    },
    {
      "game": "Roulette",
      "pct": 0,
    },
    {
      "game": "Blackjack",
      "pct": 0,
    },
    {
      "game": "Crash Games",
      "pct": 50,
    },
    {
      "game": "Scratch Cards",
      "pct": 50,
    },
  ],
  "cur": "USD",
  "dep": 20,
  "dep2": {
    "note": "v_sc_purchase_bonus",
    "pct": 25,
    "trigger": "v_2nd_purchase",
    "type": "sc_purchase",
  },
  "dep3": {
    "note": "v_sc_purchase_bonus",
    "pct": 50,
    "trigger": "v_3rd_purchase",
    "type": "sc_purchase",
  },
  "depcur": "USD",
  "econ": {
    "acqCostRatio": 0.1,
    "arpu": 14,
    "be": 1,
    "bonusSize": 10,
    "bpct": 45,
    "breakeven_wager": 23.9,
    "cac": 4,
    "costRatio": 0.1,
    "ltv3": 42,
    "mBudget": 20000,
    "maxRisk": 50000,
    "mixedRTP": 0.9655,
    "mixedWCR": 0.825,
    "over_breakeven": false,
    "pl": 5000,
    "roi3": 250,
    "sP10": {
      "conv": 0.1,
      "cost": 5000,
      "payout": 10,
      "rtp": 0.961,
      "turnover": 0,
      "wcr": 0.805,
    },
    "sP50": {
      "conv": 0.2,
      "cost": 10000,
      "payout": 10,
      "rtp": 0.966,
      "turnover": 0,
      "wcr": 0.825,
    },
    "sP90": {
      "conv": 0.4,
      "cost": 20000,
      "payout": 10,
      "rtp": 0.969,
      "turnover": 0,
      "wcr": 0.845,
    },
    "stressTest": 12000,
    "totLTV": 210000,
    "verdictKey": "verdict_ok",
    "wagerX": 0,
  },
  "fsSpec": null,
  "lic": "none",
  "ndb": {
    "days": 1,
    "gc": 100,
    "limit": "v_1_per_period",
    "sc": 1,
    "trigger": "v_daily_trigger",
    "type": "daily",
    "wager": 0,
  },
  "pl": 5000,
  "r": "sweep",
  "reg": [
    "reg_sweep_1",
    "reg_sweep_2",
    "reg_sweep_3",
    "reg_sweep_4",
    "reg_sweep_5",
  ],
  "reload": {
    "pkgs": [
      {
        "price": "$4.99",
        "sc": 100,
      },
      {
        "price": "$9.99",
        "sc": 250,
      },
      {
        "price": "$19.99",
        "sc": 500,
      },
      {
        "price": "$49.99",
        "sc": 1500,
      },
    ],
    "type": "packages",
  },
  "rtp": 96,
  "sc": "USD",
  "wager": {
    "basis": "v_no_wager",
    "days": 0,
    "games": "v_no_limit",
    "mb": "v_no_limit",
    "model": "none",
    "wF": 0,
    "wN": 0,
    "wR": 0,
    "wW": 0,
  },
  "welcome": {
    "code": "SWEEP10",
    "cur": "USD",
    "gc": 1000,
    "sc": 10,
    "trigger": "v_sweep_trigger",
    "type": "sweep",
    "validity": 30,
    "wager": 0,
  },
}
`;
